@@ -1,5 +1,8 @@
 2008-07-26  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
+	* tests/constraints.tcl: Add a nonwin contraint.
+	* tests/listbox.test:    Conform to testing policy. [Bug 2024753]
+
 	* win/tkWinWm.c: Check that the parent has been mapped before
 	* tests/wm.test: calling RemapWindows. [Bug 2009788]
 
